Normalize potion stacking; structdev tab-complete
Add centralized potion stacking handling and tab-completion support for structdev.

- Add PotionStackUtil to normalize max_stack_size for all potion ItemStacks (MAX_STACK_SIZE=16) and provide inventory normalization helpers. This addresses 1.21 behavior where stacking depends on the max_stack_size component.
- Update PotionListener to use PotionStackUtil across join, item spawn, pickup, inventory open, inventory click and brew events so potions created/seen/picked up everywhere get normalized. Brew handling is scheduled one tick later to catch alchemy results.
- Extend CommandCompletion to accept a StructurePopulator, add a "structdev" admin group with subcommands, and provide tab completions for structdev spawn using structure IDs from StructurePopulator.
- Update pendulum plugin bootstrap to pass the structurePopulator into CommandCompletion.

These changes ensure consistent potion stacking behavior server-wide and add developer-friendly completions for structure-related commands.